# matterviz

./: .gitignore  .pre-commit-config.yaml  changelog.md  citation.cff  contributing.md  deno.jsonc  eslint.config.js  package.json  playwright.config.ts  pnpm-workspace.yaml  readme.md  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-dash-demo.yml  gh-pages.yml  lint.yml  publish-anywidget.yml  publish-wasm.yml  publish.yml  test-dash.yml  test-rust.yml  test.yml
dash/: .gitignore  MANIFEST.in  README.md  component_manifest.toml  package-lock.json  package.json  pyproject.toml  tsconfig.svelte.json  vite.config.js  webpack.config.js
dash/matterviz_dash_components/: 155.matterviz_dash_components.min.js  210.matterviz_dash_components.min.js  861.matterviz_dash_components.min.js  MatterViz.py  __init__.py  matterviz_dash_components.css  matterviz_dash_components.min.js.LICENSE.txt  matterviz_wasm.wasm  typed.py
dash/scripts/: sample_app.py  sync_typed_wrappers.py
dash/src/lib/: index.js  publicPath.js  registerCustomElements.js  threeGlobals.js
dash/src/lib/components/: MatterViz.react.js
dash/src/svelte/: MatterViz.ce.svelte  resolver.js
extensions/anywidget/: anywidget.ts  h5wasm-stub.ts  package.json  reactive.svelte.ts  readme.md  theme-detection.ts  vite.config.ts
extensions/dash/: .gitignore  Dockerfile  README.md  component_manifest.toml  hf_demo_app.py  hf_space_readme.md  hugging_face_demo_app.py  package.json  pyproject.toml  readme.md  vite.config.js  vite.config.ts
extensions/dash/matterviz_dash_components/: 210.matterviz_dash_components.min.js  MatterViz.py  __init__.py  matterviz_dash_components.css  typed.py
extensions/dash/scripts/: sample_app.py  sync_typed_wrappers.py
extensions/dash/src/lib/: index.js  index.ts  publicPath.js  public_path.js  registerCustomElements.ts  threeGlobals.js
extensions/dash/src/lib/components/: MatterViz.react.d.ts  MatterViz.react.js  MatterViz.react.ts
extensions/dash/src/svelte/: MatterViz.ce.svelte  resolver.d.ts  resolver.js  resolver.ts
extensions/dash/tests/: __init__.py  test_js_utils.py  test_sync.py  test_wrappers.py
extensions/dash/tests/playwright/: __init__.py  conftest.py  test_components.py
extensions/rust/: .gitignore  Cargo.toml  benchmark_large_scale.py  pydoc-markdown.yml  pyproject.toml  readme.md
extensions/rust/benches/: matcher_bench.rs
extensions/rust/python/ferrox/: __init__.py  __init__.pyi  _ferrox.pyi
extensions/rust/python/ferrox/_ferrox/: __init__.pyi
extensions/rust/python/ferrox/optimizers/: __init__.pyi
extensions/rust/python/ferrox/properties/: __init__.pyi
extensions/rust/python/ferrox/structure/: __init__.pyi
extensions/rust/scripts/: generate_stubs.py
extensions/rust/src/: batch.rs  cell_ops.rs  cif.rs  comparator.rs  composition.rs  coordination.rs  defects.rs  distortions.rs  elastic.rs  element.rs  element_data.rs  error.rs  integrators.rs  io.rs  lattice.rs  lib.rs  matcher.rs  neighbors.rs  optimizers.rs  order_params.rs  oxidation.rs  pbc.rs  potentials.rs  python.rs  rdf.rs  species.rs  structure.rs  structure_matcher.rs  surfaces.rs  trajectory.rs  wasm.rs  wasm_types.rs  xrd.rs
extensions/rust/src/algorithms/: enumerate.rs  ewald.rs
extensions/rust/src/md/: langevin.rs  mod.rs  npt.rs  state.rs  thermostats.rs  units.rs  verlet.rs
extensions/rust/src/python/: cell.rs  composition.rs  coordination.rs  defects.rs  elastic.rs  element.rs  helpers.rs  io.rs  lattice.rs  md.rs  mod.rs  neighbors.rs  optimizers.rs  order_params.rs  oxidation.rs  potentials.rs  properties.rs  rdf.rs  species.rs  structure.rs  surfaces.rs  symmetry.rs  trajectory.rs  xrd.rs
extensions/rust/src/transformations/: mod.rs  ordering.rs  site.rs  standard.rs
extensions/rust/src/wasm/: cell.rs  composition.rs  coordination.rs  defects.rs  elastic.rs  element.rs  helpers.rs  io.rs  lattice.rs  md.rs  mod.rs  neighbors.rs  optimizers.rs  order_params.rs  potentials.rs  properties.rs  rdf.rs  species.rs  structure.rs  surfaces.rs  symmetry.rs  trajectory.rs  transformations.rs  xrd.rs
extensions/rust/tests/: benchmark_pymatgen.py  compatibility_tests.rs  conftest.py  determine_expected_behavior.py  test_cell_ops.py  test_coordination.py  test_defects.py  test_distortions.py  test_elastic.rs  test_element.py  test_ferrox_api.py  test_finite_diff.rs  test_fixtures.py  test_generate_stubs.py  test_integrator_error_handling.py  test_integrators.rs  test_invariants.rs  test_io.py  test_known_answers.rs  test_lattice.py  test_md.py  test_molecule_ase.py  test_neighbors.py  test_neighbors.rs  test_optimizers.rs  test_order_params.rs  test_oxidation.py  test_parser_robustness.rs  test_poscar.py  test_potentials_ase.py  test_proptest.rs  test_pymatgen_compat.py  test_reference_data.rs  test_surfaces.py  test_trajectory.rs  test_trajectory_py.py  test_transformations.py  test_xrd.py
extensions/rust/tests/benchmarks/: __init__.py  ase_runner.py  base_runner.py  compare.py  ferrox_runner.py  lj_benchmark.py  mace_model.py  potential_benchmark.py  results.py  structures.py  timing.py  torchsim_runner.py  validate.py
extensions/rust/tests/common/: mod.rs
extensions/rust/tests/fixtures/: generate_reference_data.py  pymatgen_reference_data.json
extensions/rust/wasm/: .gitignore  .npmignore  generate_types.js  generate_types.ts  index.js  package.json  tsconfig.json  typedoc.json  types.d.ts  vitest.config.ts
extensions/rust/wasm/data/: atomic_scattering_params.json
extensions/rust/wasm/tests/: ferrox.test.ts
rust/: Cargo.toml  build.sh
rust/src/: bonding.rs  elements.rs
scripts/: copy-xrd-data.mjs  ensure-element-data.ts  extract_pymatgen_data.py  generate-ferrox-docs.ts  package-dist-assets.mjs  package-dist-assets.ts  package-element-data.mjs  screenshot-polyhedra.mjs
src/: app.d.ts  app.html  fetch-elem-images.ts  matterviz-wasm.d.ts
static/: fermi-surfaces  isosurfaces  molecules  phase-diagrams  prism-syntax-highlight-theme-aware.css  structures  themes.mjs
(+1200 files in other folders)
