[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matterviz-dash-components"
version = "0.0.2"
description = "Plotly Dash wrapper for MatterViz (Svelte) components"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
  {name = "matterviz-dash-components contributors"}
]
dependencies = [
  "dash>=2.0.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["matterviz_dash_components"]
