[package]
name = "bonding-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "bonding_wasm"
path = "src/bonding.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = [
  "alloc",
  "derive",
], default-features = false }
serde-wasm-bindgen = "0.6"
serde_json = { version = "1.0", features = ["alloc"], default-features = false }
once_cell = "1.20"

[profile.release]
opt-level = "z"   # Optimize for size instead of speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization, slower compile
strip = true      # Strip symbols from binary
panic = "abort"   # Smaller panic implementation
