[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matterviz-dash-components"
version = "0.0.2"
description = "Plotly Dash wrapper for MatterViz (Svelte) components"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "matterviz-dash-components contributors" }]
# Tested with Dash 3.3.0; floor set to 3.0 for broader compatibility
dependencies = ["dash>=3.0"]

[project.optional-dependencies]
dev = ["pytest-playwright>=0.4.0", "pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["matterviz_dash_components"]

[tool.setuptools.package-data]
matterviz_dash_components = [
  "*.css",
  "*.js",
  "*.json",
  "*.map",
  "*.txt",
  "*.wasm",
  "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Playwright tests require: pip install pytest-playwright && playwright install chromium
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
